// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbAuthentication check Authentication with  mode accessKey 1`] = `
<div>
  <div
    class="row"
  >
    <h5>
      Authentication
      <button
        aria-label="Close"
        class="close"
        id="id"
      >
        <svg
          class="oi-help"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
          />
        </svg>
      </button>
    </h5>
  </div>
  <div
    class="container-fluid"
  >
    <div
      class="collapse"
      toggler="toggler"
    >
      <div
        class="row"
        style="margin-bottom: 15px;"
      >
        <div
          class="col"
        >
          <div>
            <p>
              Authentication parameters
            </p>
            <p>
              Please fill the user and password to connect this application
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col-md-4"
    >
      <div
        class="form-group"
      >
        <label
          class=""
          for="accessKey"
        >
          Access Key
        </label>
        <input
          aria-invalid="false"
          class="oi-form-input form-control"
          id="accessKey"
          name="accessKey"
          type="text"
          value="aaaaaa"
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
    <div
      class="col-md-4"
    >
      <div
        class="form-group"
      >
        <label
          class=""
          for="secretKey"
        >
          Secret Key
        </label>
        <div
          class="input-group"
        >
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="secretKey"
            name="secretKey"
            type="password"
            value="sssss"
          />
        </div>
        <div
          class="invalid-feedback"
          style="display: inline;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OIbAuthentication check Authentication with "custom" mode (headerName/secretKey) 1`] = `
<div>
  <div
    class="row"
  >
    <h5>
      Authentication
      <button
        aria-label="Close"
        class="close"
        id="id"
      >
        <svg
          class="oi-help"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
          />
        </svg>
      </button>
    </h5>
  </div>
  <div
    class="container-fluid"
  >
    <div
      class="collapse"
      toggler="toggler"
    >
      <div
        class="row"
        style="margin-bottom: 15px;"
      >
        <div
          class="col"
        >
          <div>
            <p>
              Authentication parameters
            </p>
            <p>
              Please fill the user and password to connect this application
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col-md-2"
    >
      <div
        class="form-group"
      >
        <label
          class=""
          for="type"
        >
          Type
        </label>
        <select
          aria-invalid="false"
          class="oi-form-input form-control"
          id="type"
          name="type"
        >
          <option
            value="Basic"
          >
            Basic
          </option>
          <option
            value="API Key"
          >
            API Key
          </option>
        </select>
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col-md-4"
    >
      <div
        class="form-group"
      >
        <label
          class=""
          for="key"
        >
          Key
        </label>
        <input
          aria-invalid="false"
          class="oi-form-input form-control"
          id="key"
          name="key"
          type="text"
          value="anyHeader"
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
    <div
      class="col-md-4"
    >
      <div
        class="form-group"
      >
        <label
          class=""
          for="secretKey"
        >
          Value
        </label>
        <div
          class="input-group"
        >
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="secretKey"
            name="secretKey"
            type="password"
            value="anySecretKey"
          />
        </div>
        <div
          class="invalid-feedback"
          style="display: inline;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OIbAuthentication check Authentication with default mode (user/password) 1`] = `
<div>
  <div
    class="row"
  >
    <h5>
      Authentication
      <button
        aria-label="Close"
        class="close"
        id="id"
      >
        <svg
          class="oi-help"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
          />
        </svg>
      </button>
    </h5>
  </div>
  <div
    class="container-fluid"
  >
    <div
      class="collapse"
      toggler="toggler"
    >
      <div
        class="row"
        style="margin-bottom: 15px;"
      >
        <div
          class="col"
        >
          <div>
            <p>
              Authentication parameters
            </p>
            <p>
              Please fill the user and password to connect this application
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col-md-2"
    >
      <div
        class="form-group"
      >
        <label
          class=""
          for="type"
        >
          Type
        </label>
        <select
          aria-invalid="false"
          class="oi-form-input form-control"
          id="type"
          name="type"
        >
          <option
            value="Basic"
          >
            Basic
          </option>
          <option
            value="API Key"
          >
            API Key
          </option>
        </select>
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col-md-4"
    >
      <div
        class="form-group"
      >
        <label
          class=""
          for="username"
        >
          User name
        </label>
        <input
          aria-invalid="false"
          class="oi-form-input form-control"
          id="username"
          name="username"
          type="text"
          value="user"
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
    <div
      class="col-md-4"
    >
      <div
        class="form-group"
      >
        <label
          class=""
          for="password"
        >
          Password
        </label>
        <div
          class="input-group"
        >
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="password"
            name="password"
            type="password"
            value="pass"
          />
        </div>
        <div
          class="invalid-feedback"
          style="display: inline;"
        />
      </div>
    </div>
  </div>
</div>
`;
